# dijkstra

./: .gitignore  CMakeLists.txt  README.md  benchmark.c  benchmark.h  main.c
abt/: linked_list.c  linked_list.h
adt/: array.c  array.h  data.h  edge.c  edge.h  heap.c  heap.h  linked_list.c  linked_list.h
graph/: graph.c  graph.h
plot/: main.py
plot/data/: dijkstra-2021-08-05.txt
runs/: dijkstra-2021-08-05.txt
solver/: dijkstra_array.c  dijkstra_array.h  dijkstra_array_with_explored_marked.c  dijkstra_array_with_explored_marked.h  dijkstra_array_with_explored_removal.c  dijkstra_array_with_explored_removal.h  dijkstra_heap.c  dijkstra_heap.h
tests/: array-tests.h  edge-tests.h  graph-parse-tests.h  graph-tests.h  heap-tests.h  linked-list-tests.c  linked-list-tests.h  main-tests.c
